# log-distance-measures

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml
scr/log_similarity_metrics/: config.py  time.py
scripts/: ELS.py  SummarizeMetrics.py
src/log_distance_measures/: __init__.py  absolute_event_distribution.py  active_cases_over_time.py  case_arrival_distribution.py  circadian_event_distribution.py  circadian_workforce_distribution.py  config.py  control_flow_log_distance.py  cycle_time_distribution.py  n_gram_distribution.py  relative_event_distribution.py  remaining_time_distribution.py  work_in_progress.py
src/log_similarity_metrics/: __init__.py  absolute_event_distribution.py  absolute_timestamps.py  absolute_timestamps_emd.py  active_cases_over_time.py  case_arrival_distribution.py  config.py  time.py  (+12 more)
tests/: absolute_event_distribution_test.py  absolute_timestamps_emd_test.py  absolute_timestamps_test.py  active_cases_over_time_test.py  case_arrival_distribution_test.py  circadian_event_distribution_test.py  circadian_timestamps_test.py  circadian_workforce_distribution_test.py  control_flow_log_distance_test.py  control_flow_log_similarity_test.py  cycle_time_distribution_test.py  cycle_time_emd_test.py  cycle_times_test.py  directly_follows_distance_test.py  earth_movers_distance_test.py  inter_arrival_times_test.py  n_gram_distribution_distance_test.py  n_gram_distribution_test.py  relative_event_distribution_test.py  remaining_time_distribution_test.py  time_test.py  work_in_progress_test.py
(+11 files in other folders)
