[tool.poetry]
name = "log-distance-measures"
version = "0.1.0"
description = "Python package with the implementation of different distance measures between two event logs, from the control-flow, temporal, and queuing perspectives."
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0.0"
scipy = "^1.10.1"
jellyfish = "^0.11.2"
pulp = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

